- updated the parser to work with the new type system - updated MessageRouter and Clipsinterpreter - WARNING! Still none working, stick to Revision 473 until a commit message says a newer version is safe to use
git-svn-id: https://jamocha.svn.sourceforge.net/svnroot/jamocha/jamocha@476 2cd91b7d-3b21-0410-a5f4-f42db4f24360